<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.dam2.calculadora.MainActivity"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculadora_Resultado" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow>
                <Button
                    android:text="@string/calculadora_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_1"
                    android:layout_weight="1" />
                <Button
                    android:text="@string/calculadora_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_2"
                    android:layout_weight="1" />
                <Button
                    android:text="@string/calculadora_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_3"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow>
                <Button
                    android:text="@string/calculadora_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_4"
                    android:layout_weight="1" />
                <Button
                    android:text="@string/calculadora_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_5"
                    android:layout_weight="1" />
                <Button
                    android:text="@string/calculadora_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_6"
                    android:layout_weight="1" />
            </TableRow>
            <TableRow>
                <Button
                    android:text="@string/calculadora_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_7"
                    android:layout_weight="1" />
                <Button
                    android:text="@string/calculadora_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_8"
                    android:layout_weight="1" />
                <Button
                    android:text="@string/calculadora_9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_9"
                    android:layout_weight="1" />
            </TableRow>
            <TableRow>
                <Button
                    android:text="@string/calculadora_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_0"
                    android:layout_weight="1" />
            </TableRow>



        </TableLayout>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TableRow>
                <Button
                    android:text="@string/calculadora_Plus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_Plus"
                    android:layout_weight="1" />
            </TableRow>
            <TableRow>
                <Button
                    android:text="@string/calculadora_Minus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_Minus"
                    android:layout_weight="1" />
            </TableRow>
            <TableRow>
                <Button
                    android:text="@string/calculadora_C"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_C"
                    android:layout_weight="1" />
            </TableRow>

        </TableLayout>
    </LinearLayout>


</LinearLayout>
